minor changes to userInteface